Version 3.3.0: Add support for item index provider. Fix issue with origo tabindex mpt correctly set. Add tests. Remove ContextMenuElement workaround from the tests as it is now fixed in TestBench.